SLCORE-384 Store taint issues separately